# showeq-qt

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml
packaging/: build-appimage.sh  showeq-qt.desktop
resources/: showeq-qt.qrc
src/: main.cpp
src/app/: ConnectDialog.cpp  ConnectDialog.h  MainWindow.cpp  MainWindow.h  Settings.cpp  Settings.h
src/daemon/: DaemonConnection.cpp  DaemonConnection.h  PlayerState.cpp  PlayerState.h  SpawnModel.cpp  SpawnModel.h  ZoneState.cpp  ZoneState.h  races.h
src/widgets/: CompassWidget.cpp  CompassWidget.h  MapWidget.cpp  MapWidget.h  MessageWindow.cpp  MessageWindow.h  NetworkDiagWidget.cpp  NetworkDiagWidget.h  PlayerStatsWidget.cpp  PlayerStatsWidget.h  SpawnListWidget.cpp  SpawnListWidget.h  SpellListWidget.cpp  SpellListWidget.h
